--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
 #+title: chunixos
 * To-Do
 ** TODO better modularization / system profiles that don't repeat themselves
+** TODO actual profiles that aren't just everything you need thrown into /work profile
 ** TODO lf declarative rather than tangling in luke lf config
 ** TODO telegram
 ** TODO emacs email dependencies added and configured
