--- a/README.org
+++ b/README.org
@@ -30,9 +30,9 @@ if [ $# -gt 0 ]
   then
     SCRIPT_DIR=$1
   else
-    SCRIPT_DIR=~/.dotfiles
+    SCRIPT_DIR=~/.config/dogfiles
 fi
-nix-shell -p git --command "git clone https://gitlab.com/librephoenix/nixos-config $SCRIPT_DIR"
+nix-shell -p git --command "git clone https://github.com/chumutt/dogfiles $SCRIPT_DIR"
 
 # Generate hardware config for new system
 sudo nixos-generate-config --show-hardware-config > $SCRIPT_DIR/system/hardware-configuration.nix
@@ -47,10 +47,10 @@ else
 fi
 
 # Patch flake.nix with different username/name and remove email by default
-sed -i "0,/emmet/s//$(whoami)/" $SCRIPT_DIR/flake.nix
-sed -i "0,/Emmet/s//$(getent passwd $(whoami) | cut -d ':' -f 5 | cut -d ',' -f 1)/" $SCRIPT_DIR/flake.nix
-sed -i "s/emmet@librephoenix.com//" $SCRIPT_DIR/flake.nix
-sed -i "s+~/.dotfiles+$SCRIPT_DIR+g" $SCRIPT_DIR/flake.nix
+sed -i "0,/chu/s//$(whoami)/" $SCRIPT_DIR/flake.nix
+sed -i "0,/Chu/s//$(getent passwd $(whoami) | cut -d ':' -f 5 | cut -d ',' -f 1)/" $SCRIPT_DIR/flake.nix
+sed -i "s/chufilthymutt@gmail.com//" $SCRIPT_DIR/flake.nix
+sed -i "s+~/.config/dogfiles+$SCRIPT_DIR+g" $SCRIPT_DIR/flake.nix
 
 # Open up editor to manually edit flake.nix before install
 if [ -z "$EDITOR" ]; then
@@ -58,8 +58,8 @@ if [ -z "$EDITOR" ]; then
 fi
 $EDITOR $SCRIPT_DIR/flake.nix;
 
-# Permissions for files that should be owned by root
-sudo $SCRIPT_DIR/harden.sh $SCRIPT_DIR;
+# Set permissions for files that should be owned by root
+# sudo $SCRIPT_DIR/harden.sh $SCRIPT_DIR; # TODO Current no harden.sh
 
 # Rebuild system
 sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
