--- a/README.org
+++ b/README.org
@@ -22,14 +22,22 @@
 - [[https://www.youtube.com/@wilfridtaylor][Wil T]]
 - [[https://github.com/librephoenix/nixos-config][librephoenix/nixos-config]]
 - [[https://github.com/hlissner/dotfiles][hlissner/dotfiles]]
-* Install script
+* Installation
+To install, run =install=:
 
-Credits to LibrePhoenix.
+#+name: run-install-script-example
+#+begin_src sh :results none :tangle no
+./install
+#+end_src
+
+which will run the following two scripts (credits to LibrePhoenix):
+
+** The install script
 
 Clone dotfiles.
 
-#+name: clone-dotfiles
-#+begin_src sh :shebang #!/bin/sh
+#+name: install-clone-dotfiles
+#+begin_src sh
 if [ $# -gt 0 ]
   then
     SCRIPT_DIR=$1
@@ -41,14 +49,14 @@ nix-shell -p git --command "git clone https://github.com/chumutt/dogfiles $SCRIP
 
 Generate hardware configuration for the system.
 
-#+name: generate-hardware-config
+#+name: install-generate-hardware-config
 #+begin_src sh
 sudo nixos-generate-config --show-hardware-config > $SCRIPT_DIR/system/hardware-configuration.nix
 #+end_src
 
 Check if the system is running UEFI or BIOS.
 
-#+name: uefi-or-bios-check
+#+name: install-uefi-or-bios-check
 #+begin_src sh
 if [ -d /sys/firmware/efi/efivars ]; then
     sed -i "0,/bootMode.*=.*\".*\";/s//bootMode = \"uefi\";/" $SCRIPT_DIR/flake.nix
@@ -61,7 +69,7 @@ fi
 
 Patch flake.nix with different username/name and remove email by default.
 
-#+name: patch-flake-and-attune-to-user
+#+name: install-patch-flake-and-attune-to-user
 #+begin_src sh
 sed -i "0,/chu/s//$(whoami)/" $SCRIPT_DIR/flake.nix
 sed -i "0,/Chu/s//$(getent passwd $(whoami) | cut -d ':' -f 5 | cut -d ',' -f 1)/" $SCRIPT_DIR/flake.nix
@@ -71,7 +79,7 @@ sed -i "s+~/.config/dogfiles+$SCRIPT_DIR+g" $SCRIPT_DIR/flake.nix
 
 Open up editor to manually edit flake.nix before install.
 
-#+name: edit-flake-prompt
+#+name: install-edit-flake-prompt
 #+begin_src sh
 if [ -z "$EDITOR" ]; then
     EDITOR=nano;
@@ -81,14 +89,14 @@ $EDITOR $SCRIPT_DIR/flake.nix;
 
 Set permissions for files that should be owned by root.
 
-#+name: harden-core-configuration
+#+name: install-harden-core-configuration
 #+begin_src sh
-sudo $SCRIPT_DIR/harden.sh $SCRIPT_DIR; # TODO Currently no harden.sh
+sudo $SCRIPT_DIR/harden $SCRIPT_DIR;
 #+end_src
 
 Rebuild system.
 
-#+name: nixos-rebuild-system-with-flake
+#+name: install-nixos-rebuild-system-with-flake
 #+begin_src sh
 sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
 #+end_src
@@ -100,15 +108,65 @@ Install and build home-manager configuration.
 nix run home-manager/master --extra-experimental-features nix-command --extra-experimental-features flakes -- switch --flake $SCRIPT_DIR#user;
 #+end_src
 
-#+begin_src sh :noweb yes :eval no :tangle ./install
-<<clone-dotfiles>>
-<<generate-hardware-config>>
-<<uefi-or-bios-check>>
-<<patch-flake-and-attune-to-user>>
-<<edit-flake-prompt>>
-<<harden-core-configuration>>
-<<nixos-rebuild-system-with-flake>>
+#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./install
+<<install-clone-dotfiles>>
+<<install-generate-hardware-config>>
+<<install-uefi-or-bios-check>>
+<<install-patch-flake-and-attune-to-user>>
+<<install-edit-flake-prompt>>
+<<install-harden-core-configuration>>
+<<install-nixos-rebuild-system-with-flake>>
 <<install-and-build-home-manager-config>>
+#+end_src
+
+** The security hardening script
+
+#+begin_quote
+This will harden the security of [your configuration], preventing unprivileged users from editing the system-level ("root" configuration) files maliciously.
+
+Run this inside of [~/.config/dogfiles] (or whatever directory you installed the dotfiles to).
+
+Run this as root!
+
+BTW, this assumes your user account has a PID/GID of 1000.
+
+After running this, the command `nix flake update` will require root.
+#+end_quote
+
+Note: Additionally, this script is executed whenever the =install= script is executed.
+
+#+name: harden-check-pwd
+#+begin_src sh
+if [ "$#" = 1 ]; then
+    SCRIPT_DIR=$1;
+else
+    SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+fi
+#+end_src
+
+#+name: harden-enter-harden-and-exit
+#+begin_src sh
+pushd $SCRIPT_DIR &> /dev/null;
+sudo chown 0:0 .;
+sudo chown 0:0 profiles/*;
+sudo chown -R 0:0 system;
+sudo chown -R 0:0 patches;
+sudo chown 0:0 flake.lock;
+sudo chown 0:0 flake.nix
+sudo chown 0:0 profiles
+sudo chown 0:0 profiles/*/configuration.nix;
+sudo chown 0:0 profiles/homelab/base.nix;
+sudo chown 0:0 harden.sh;
+sudo chown 0:0 soften.sh;
+sudo chown 0:0 install.sh;
+sudo chown 0:0 update.sh;
+sudo chown 1000:users **/README.org;
+popd &> /dev/null;
+#+end_src
+
+#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./harden
+<<harden-check-pwd>>
+<<harden-enter-harden-and-exit>>
 #+end_src
 
 * flake.nix
