--- a/README.org
+++ b/README.org
@@ -135,10 +135,10 @@ sudo chown 0:0 flake.nix
 sudo chown 0:0 profiles
 sudo chown 0:0 profiles/*/configuration.nix;
 sudo chown 0:0 profiles/homelab/base.nix;
-sudo chown 0:0 harden.sh;
-sudo chown 0:0 soften.sh;
-sudo chown 0:0 install.sh;
-sudo chown 0:0 update.sh;
+sudo chown 0:0 harden;
+sudo chown 0:0 soften;
+sudo chown 0:0 install;
+sudo chown 0:0 update;
 sudo chown 1000:users **/README.org;
 popd &> /dev/null;
 #+end_src
