--- a/README.org
+++ b/README.org
@@ -214,6 +214,101 @@ pushd $SCRIPT_DIR &> /dev/null;
 sudo chown -R 1000:users .;
 popd &> /dev/null;
 #+end_src
+* Update script
+
+#+begin_quote
+Script to update my flake without synchronizing configuration.
+#+end_quote
+
+#+begin_src sh :shebang #!/bin/sh :tangle ./update
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+
+# Update flake
+pushd $SCRIPT_DIR &> /dev/null;
+sudo nix flake update;
+sudo nix-channel --update;
+nix-channel --update;
+popd &> /dev/null;
+#+end_src
+
+* Upgrade script
+
+#+begin_quote
+Script to update system and sync. Does not pull changes from git.
+#+end_quote
+
+#+begin_src sh :shebang #!/bin/sh :tangle ./upgrade
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+
+# Update flake
+$SCRIPT_DIR/update;
+
+# Synchronize system
+$SCRIPT_DIR/sync;
+#+end_src
+
+* Sync scripts
+
+** System sync script
+
+#+begin_quote
+Script to synchronize system state with configuration files for nixos system and home-manager.
+#+end_quote
+
+#+begin_src sh :shebang #!/bin/sh :tangle ./sync-system
+
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+
+# Rebuild system
+sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
+#+end_src
+
+** User sync script
+
+#+begin_quote
+Script to synchronize system state with configuration files for nixos system and home-manager.
+#+end_quote
+
+#+begin_src sh :shebang #!/bin/sh :tangle ./sync-user
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+
+# Fix root-owned sqlite errors
+sudo chown -R 1000:users ~/.cache/nix;
+
+# Install and build home-manager configuration
+home-manager switch --flake $SCRIPT_DIR#user;
+
+$SCRIPT_DIR/sync-posthook
+#+end_src
+
+** Post-hook sync script
+
+#+begin_quote
+Post hooks to be called after a configuration sync.
+
+Mainly just to reload stylix.
+#+end_quote
+
+Note: Disabled.
+
+#+begin_src sh :shebang #!/bin/sh :tangle ./sync-posthook
+
+# xmonad
+# pgrep xmobar &> /dev/null && echo "Killing old xmobar instances" && echo "Running killall xmobar" && killall xmobar &> /dev/null; # xmonad will restart xmobar
+# pgrep xmonad &> /dev/null && echo "Recompiling xmonad" && echo "Running xmonad --recompile && xmonad --restart" && xmonad --recompile &> /dev/null && xmonad --restart &> /dev/null;
+# pgrep .dunst-wrapped &> /dev/null && echo "Restarting dunst" && killall .dunst-wrapped && echo "Running dunst" && dunst &> /dev/null & disown;
+# pgrep xmonad &> /dev/null && echo "Reapplying background from stylix via feh" && echo "Running ~/.fehbg-stylix" && ~/.fehbg-stylix &> /dev/null & disown;
+
+# hyprland
+# pgrep Hyprland &> /dev/null && echo "Reloading hyprland" && hyprctl reload &> /dev/null;
+# pgrep .waybar-wrapped &> /dev/null && echo "Restarting waybar" && killall .waybar-wrapped && echo "Running waybar" && waybar &> /dev/null & disown;
+# pgrep fnott &> /dev/null && echo "Restarting fnott" && killall fnott && echo "Running fnott" && fnott &> /dev/null & disown;
+# pgrep hyprpaper &> /dev/null && echo "Reapplying background via hyprpaper" && killall hyprpaper && echo "Running hyprpaper" && hyprpaper &> /dev/null & disown;
+# pgrep nwggrid-server &> /dev/null && echo "Restarting nwggrid-server" && killall nwggrid-server && echo "Running nwggrid-wrapper" && nwggrid-wrapper &> /dev/null & disown;
+
+# emacs
+# pgrep emacs &> /dev/null && echo "Reloading emacs stylix theme" && echo "Running emacsclient --no-wait --eval \"(load-theme 'doom-stylix t nil)\"" && emacsclient --no-wait --eval "(load-theme 'doom-stylix t nil)" &> /dev/null;
+#+end_src
 
 * flake.nix
 #+begin_src nix :tangle ./flake.nix
