--- a/README.org
+++ b/README.org
@@ -214,6 +214,9 @@ pushd $SCRIPT_DIR &> /dev/null;
 sudo chown -R 1000:users .;
 popd &> /dev/null;
 #+end_src
+
+#+RESULTS:
+
 * Update script
 
 #+begin_quote
