--- a/install
+++ b/install
@@ -22,6 +22,6 @@ if [ -z "$EDITOR" ]; then
     EDITOR=nano;
 fi
 $EDITOR $SCRIPT_DIR/flake.nix;
-sudo $SCRIPT_DIR/harden $SCRIPT_DIR;
+# sudo $SCRIPT_DIR/harden $SCRIPT_DIR;
 sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
 nix run home-manager/master --extra-experimental-features nix-command --extra-experimental-features flakes -- switch --flake $SCRIPT_DIR#user;
