--- a/README.org
+++ b/README.org
@@ -68,7 +68,7 @@ Set permissions for files that should be owned by root:
 
 #+name: install-harden-core-configuration
 #+begin_src sh
-# sudo $SCRIPT_DIR/harden $SCRIPT_DIR;
+# sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR;
 #+end_src
 
 Rebuild system:
@@ -85,7 +85,7 @@ Install and build the home-manager configuration:
 nix run home-manager/master --extra-experimental-features nix-command --extra-experimental-features flakes -- switch --flake $SCRIPT_DIR#user;
 #+end_src
 
-#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./install
+#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./bin/install
 <<install-clone-dotfiles>>
 <<install-generate-hardware-config>>
 <<install-uefi-or-bios-check>>
@@ -135,15 +135,15 @@ sudo chown 0:0 flake.nix
 sudo chown 0:0 profiles
 sudo chown 0:0 profiles/*/configuration.nix;
 sudo chown 0:0 profiles/homelab/base.nix;
-sudo chown 0:0 harden;
-sudo chown 0:0 soften;
-sudo chown 0:0 install;
-sudo chown 0:0 update;
+sudo chown 0:0 bin/harden;
+sudo chown 0:0 bin/soften;
+sudo chown 0:0 bin/install;
+sudo chown 0:0 bin/update;
 sudo chown 1000:users **/README.org;
 popd &> /dev/null;
 #+end_src
 
-#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./harden
+#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./bin/harden
 <<harden-check-pwd>>
 <<harden-enter-harden-and-exit>>
 #+end_src
@@ -163,7 +163,7 @@ Relax permissions temporarily so git can work:
 
 #+name: pull-temporary-softener
 #+begin_src sh
-sudo $SCRIPT_DIR/soften $SCRIPT_DIR;
+sudo $SCRIPT_DIR/bin/soften $SCRIPT_DIR;
 #+end_src
 
 Stash local edits, pull changes, and re-apply local edits:
@@ -181,15 +181,16 @@ Set permissions for files that should be owned by root:
 
 #+name: pull-set-perms
 #+begin_src sh
-sudo $SCRIPT_DIR/harden.sh $SCRIPT_DIR;
+sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR;
 #+end_src
 
-#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./pull
+#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./bin/pull
 <<pull-set-enter-script-dir>>
 <<pull-temporary-softener>>
 <<pull-stash-pull-apply>>
 <<pull-set-perms>>
 #+end_src
+
 * Soften script
 
 This will soften the security of these dotfiles, allowing the default unpriveleged user with UID/GID of 1000 to edit ALL FILES in the dotfiles directory.
@@ -204,7 +205,7 @@ BTW, this assumes your user account has a UID/GID of 1000.
 
 After running this, *[unprivileged users] can make edits to important system files which may compromise the system after running* =nixos-rebuild switch=. This script can be undone by running its inverse, =harden=.
 
-#+begin_src sh :shebang #!/bin/sh :tangle ./soften
+#+begin_src sh :shebang #!/bin/sh :tangle ./bin/soften
 if [ "$#" = 1 ]; then
     SCRIPT_DIR=$1;
 else
@@ -221,7 +222,7 @@ popd &> /dev/null;
 Script to update my flake without synchronizing configuration.
 #+end_quote
 
-#+begin_src sh :shebang #!/bin/sh :tangle ./update
+#+begin_src sh :shebang #!/bin/sh :tangle ./bin/update
 SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
 
 # Update flake
@@ -238,25 +239,24 @@ popd &> /dev/null;
 Script to update system and sync. Does not pull changes from git.
 #+end_quote
 
-#+begin_src sh :shebang #!/bin/sh :tangle ./upgrade
+#+begin_src sh :shebang #!/bin/sh :tangle ./bin/upgrade
 SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
 
 # Update flake
-$SCRIPT_DIR/update;
+$SCRIPT_DIR/bin/update;
 
 # Synchronize system
-$SCRIPT_DIR/sync;
+$SCRIPT_DIR/bin/sync;
 #+end_src
 
 * Sync scripts
-
 ** System sync script
 
 #+begin_quote
 Script to synchronize system state with configuration files for nixos system and home-manager.
 #+end_quote
 
-#+begin_src sh :shebang #!/bin/sh :tangle ./sync-system
+#+begin_src sh :shebang #!/bin/sh :tangle ./bin/sync-system
 SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
 
 # Rebuild system
@@ -269,7 +269,7 @@ sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
 Script to synchronize system state with configuration files for nixos system and home-manager.
 #+end_quote
 
-#+begin_src sh :shebang #!/bin/sh :tangle ./sync-user
+#+begin_src sh :shebang #!/bin/sh :tangle ./bin/sync-user
 SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
 
 # Fix root-owned sqlite errors
@@ -278,7 +278,7 @@ sudo chown -R 1000:users ~/.cache/nix;
 # Install and build home-manager configuration
 home-manager switch --flake $SCRIPT_DIR#user;
 
-$SCRIPT_DIR/sync-posthook
+$SCRIPT_DIR/bin/sync-posthook
 #+end_src
 
 ** Post-hook sync script
@@ -291,7 +291,7 @@ Mainly just to reload stylix.
 
 Note: Disabled.
 
-#+begin_src sh :shebang #!/bin/sh :tangle ./sync-posthook
+#+begin_src sh :shebang #!/bin/sh :tangle ./bin/sync-posthook
 
 # xmonad
 # pgrep xmobar &> /dev/null && echo "Killing old xmobar instances" && echo "Running killall xmobar" && killall xmobar &> /dev/null; # xmonad will restart xmobar
