--- a/README.org
+++ b/README.org
@@ -68,7 +68,7 @@ Set permissions for files that should be owned by root:
 
 #+name: install-harden-core-configuration
 #+begin_src sh
-# sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR;
+sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR;
 #+end_src
 
 Rebuild system:
@@ -85,7 +85,7 @@ Install and build the home-manager configuration:
 nix run home-manager/master --extra-experimental-features nix-command --extra-experimental-features flakes -- switch --flake $SCRIPT_DIR#user;
 #+end_src
 
-#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./bin/install
+#+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :mkdirp yes :tangle ./bin/install
 <<install-clone-dotfiles>>
 <<install-generate-hardware-config>>
 <<install-uefi-or-bios-check>>
