--- a/README.org
+++ b/README.org
@@ -453,6 +453,12 @@ Note: Disabled.
             inherit inputs;
           };
         };
+        iso = lib.nixosSystem {
+          system = systemSettings.system;
+          modules = [
+            ./profiles/iso/configuration.nix # pulls in from work config
+          ];
+        }
       };
       # apps = forAllSystems (system: {
       #   default = self.apps.${system}.install;
