--- a/README.org
+++ b/README.org
@@ -1732,10 +1732,7 @@ exit 1
 { pkgs, ... }:
 
 {
-  home.packages = with pkgs;
-    [
-      rustup
-    ];
+  home.packages = with pkgs; [ rustup ];
 }
 #+end_src
 ** shell/sh.nix
