--- a/README.org
+++ b/README.org
@@ -438,6 +438,12 @@ Note: Disabled.
             inherit inputs;
           };
         };
+        default = lib.nixosSystem {
+          system = systemSettings.system;
+          modules = [
+            ./profiles/iso/configuration.nix # pulls in from work config # TODO separate
+          ];
+        };
         iso = lib.nixosSystem {
           system = systemSettings.system;
           modules = [
