add packages,apps, parts

--- a/README.org
+++ b/README.org
@@ -438,7 +438,30 @@ Note: Disabled.
             inherit inputs;
           };
         };
+
+        packages = forAllSystems (system:
+          let pkgs = nixpkgsFor.${system};
+          in {
+            default = self.packages.${system}.install;
+
+            install = pkgs.writeShellApplication {
+              name = "install";
+              runtimeInputs = with pkgs;
+                [ git ]; # I could make this fancier by adding other deps
+              text = ''${./install} "$@"'';
+            };
+          });
+
+        apps = forAllSystems (system: {
+          default = self.apps.${system}.install;
+
+          install = {
+            type = "app";
+            program = "${self.packages.${system}.install}/bin/install";
+          };
+        });
       };
+
       inputs = {
         nixpkgs.url = "nixpkgs/nixos-unstable";
         nixpkgs-stable.url = "nixpkgs/nixos-24.05";
