--- a/README.org
+++ b/README.org
@@ -393,6 +393,15 @@ Note: Disabled.
           allowUnfreePredicate = (_: true);
         };
       };
+
+      pkgs-unstable = import inputs.nixpkgs-patched {
+        system = systemSettings.system;
+        config = {
+          allowUnfree = true;
+          allowUnfreePredicate = (_: true);
+        };
+        overlays = [ inputs.rust-overlay.overlays.default ];
+      };
       # configure lib
       # use nixpkgs if running a server (homelab or worklab profile)
       # otherwise use patched nixos-unstable nixpkgs
@@ -459,7 +468,8 @@ Note: Disabled.
               name = "install";
               runtimeInputs = with pkgs;
                 [ git ]; # I could make this fancier by adding other deps
-              text = ''${./install} "$@"'';
+              # text = ''${./install} "$@"'';
+              text = ''${./bin/install} "$@"'';
             };
           });
 
