--- a/README.org
+++ b/README.org
@@ -1863,7 +1863,11 @@ in {
 ** TODO make nixos install image
 ** TODO install working
 #+begin_src sh :noeval yes :shebang #!/bin/sh :tangle ./bin/install-unstable
-nix-shell -p git --command "nix run --experimental-features 'nix-command flakes' github:chumutt/dogfiles -- ~/.config/dogfiles"
+sudo nixos-rebuild switch;
+nix-shell -p git --command "nix run \
+    --experimental-features 'nix-command flakes' \
+github:chumutt/dogfiles \
+-- ~/.config/dogfiles"
 #+end_src
 * References / Credits
 - [[https://www.youtube.com/@wilfridtaylor][Wil T]]
