--- a/README.org
+++ b/README.org
@@ -22,11 +22,11 @@ Clone dotfiles:
 
 #+name: install-clone-dotfiles
 #+begin_src sh
-if [ $# -gt 0 ]
+if [ $# -gt 0 ] # if no arguments are passed to the script, then
   then
-    SCRIPT_DIR=$1
+    SCRIPT_DIR=$1 # arguments were passed
   else
-    SCRIPT_DIR=~/.config/dogfiles
+    SCRIPT_DIR=~/.config/dogfiles # arguments were not passed
 fi
 nix-shell -p git --command "git clone https://github.com/chumutt/dogfiles $SCRIPT_DIR"
 #+end_src
@@ -124,7 +124,7 @@ Note: Additionally, this script is executed whenever the =install= script is exe
 if [ "$#" = 1 ]; then
     SCRIPT_DIR=$1;
 else
-    SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+    SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
 fi
 #+end_src
 
@@ -163,7 +163,7 @@ Automated script to update my non-primary system's configuration to be in sync w
 
 #+name: pull-set-enter-script-dir
 #+begin_src sh
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
 #+end_src
 
 Relax permissions temporarily so git can work:
@@ -216,7 +216,7 @@ After running this, *[unprivileged users] can make edits to important system fil
 if [ "$#" = 1 ]; then
     SCRIPT_DIR=$1;
 else
-    SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+    SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
 fi
 pushd $SCRIPT_DIR &> /dev/null;
 sudo chown -R 1000:users ../;
@@ -230,7 +230,7 @@ Script to update my flake without synchronizing configuration.
 #+end_quote
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/update
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
 
 # Update flake
 pushd $SCRIPT_DIR &> /dev/null;
@@ -247,7 +247,7 @@ Script to update system and sync. Does not pull changes from git.
 #+end_quote
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/upgrade
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
 
 # Update flake
 $SCRIPT_DIR/bin/update;
@@ -264,7 +264,7 @@ Script to synchronize system state with configuration files for nixos system and
 #+end_quote
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/sync-system
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
 
 # Rebuild system
 sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
@@ -277,7 +277,7 @@ Script to synchronize system state with configuration files for nixos system and
 #+end_quote
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/sync-user
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
 
 # Fix root-owned sqlite errors
 sudo chown -R 1000:users ~/.cache/nix;
