--- a/bin/install
+++ b/bin/install
@@ -1,9 +1,9 @@
 #!/bin/sh
-if [ $# -gt 0 ]
+if [ $# -gt 0 ] # if no arguments are passed to the script, then
   then
-    SCRIPT_DIR=$1
+    SCRIPT_DIR=$1 # arguments were passed
   else
-    SCRIPT_DIR=~/.config/dogfiles
+    SCRIPT_DIR=~/.config/dogfiles # arguments were not passed
 fi
 nix-shell -p git --command "git clone https://github.com/chumutt/dogfiles $SCRIPT_DIR"
 sudo nixos-generate-config --show-hardware-config > $SCRIPT_DIR/system/hardware-configuration.nix
