--- a/README.org
+++ b/README.org
@@ -338,7 +338,7 @@ Note: Disabled.
       };
       userSettings = rec {
         username = "chu";
-        name = "chumutt";
+        name = "chu";
         email = "chufilthymutt@gmail.com";
         dotfilesDir = "~/.config/dogfiles";
         # theme = null; TODO
