--- a/README.org
+++ b/README.org
@@ -1851,6 +1851,7 @@ in {
 ** TODO random-splash-image emacs
 ** TODO make nixos install image
 ** TODO install working
+had to add git and enable extra experimental features nix-command and flakes in order to get the cogs turning; may need to update the flake.lock in order for the way it's supposed to be installed to work.
 * References / Credits
 - [[https://www.youtube.com/@wilfridtaylor][Wil T]]
 - [[https://github.com/librephoenix/nixos-config][librephoenix/nixos-config]]
