--- a/README.org
+++ b/README.org
@@ -391,14 +391,25 @@ Note: Disabled.
           allowUnfreePredicate = (_: true);
         };
       };
+
+      pkgs-unstable = import inputs.nixpkgs-patched {
+        system = systemSettings.system;
+        config = {
+          allowUnfree = true;
+          allowUnfreePredicate = (_: true);
+        };
+      };
+
       # configure lib
       # use nixpkgs if running a server (homelab or worklab profile)
       # otherwise use patched nixos-unstable nixpkgs
-      lib = (if ((systemSettings.profile == "homelab")
-        || (systemSettings.profile == "worklab")) then
-        inputs.nixpkgs-stable.lib
-      else
-        inputs.nixpkgs.lib);
+      # lib = (if ((systemSettings.profile == "homelab")
+      #   || (systemSettings.profile == "worklab")) then
+      #   inputs.nixpkgs-stable.lib
+      # else
+      #   inputs.nixpkgs.lib); #TODO
+      lib = inputs.nixpkgs.lib;
+
       # use home-manager-stable if running a server (homelab or worklab profile)
       # otherwise use home-manager-unstable
       home-manager = (if ((systemSettings.profile == "homelab")
