--- a/README.org
+++ b/README.org
@@ -408,7 +408,7 @@ Note: Disabled.
       #   inputs.nixpkgs-stable.lib
       # else
       #   inputs.nixpkgs.lib); #TODO
-      lib = inputs.nixpkgs;
+      # lib = inputs.nixpkgs;
 
       # use home-manager-stable if running a server (homelab or worklab profile)
       # otherwise use home-manager-unstable
