--- a/README.org
+++ b/README.org
@@ -363,13 +363,13 @@ Note: Disabled.
             editor);
       };
       # create patched nixpkgs
-      nixpkgs-patched = (import inputs.nixpkgs {
-        system = systemSettings.system;
-        rocmSupport = (if systemSettings.gpu == "amd" then true else false);
-      }).applyPatches {
-        name = "nixpkgs-patched";
-        src = inputs.nixpkgs;
-      };
+      # nixpkgs-patched = (import inputs.nixpkgs {
+      #   system = systemSettings.system;
+      #   rocmSupport = (if systemSettings.gpu == "amd" then true else false);
+      # }).applyPatches {
+      #   name = "nixpkgs-patched";
+      #   src = inputs.nixpkgs;
+      # };
       # configure pkgs
       # use nixpkgs if running a server (homelab or worklab profile)
       # otherwise use patched nixos-unstable nixpkgs
@@ -384,6 +384,7 @@ Note: Disabled.
             allowUnfreePredicate = (_: true);
           };
         }));
+
       pkgs-stable = import inputs.nixpkgs-stable {
         system = systemSettings.system;
         config = {
@@ -392,7 +393,8 @@ Note: Disabled.
         };
       };
 
-      pkgs-unstable = import inputs.nixpkgs-patched {
+      # pkgs-unstable = import inputs.nixpkgs-patched {
+      pkgs-unstable = import inputs.nixpkgs {
         system = systemSettings.system;
         config = {
           allowUnfree = true;
@@ -403,11 +405,11 @@ Note: Disabled.
       # configure lib
       # use nixpkgs if running a server (homelab or worklab profile)
       # otherwise use patched nixos-unstable nixpkgs
-      # lib = (if ((systemSettings.profile == "homelab")
-      #   || (systemSettings.profile == "worklab")) then
-      #   inputs.nixpkgs-stable.lib
-      # else
-      #   inputs.nixpkgs.lib); #TODO
+      lib = (if ((systemSettings.profile == "homelab")
+        || (systemSettings.profile == "worklab")) then
+        inputs.nixpkgs-stable.lib
+      else
+        inputs.nixpkgs.lib);
       # lib = inputs.nixpkgs;
 
       # use home-manager-stable if running a server (homelab or worklab profile)
