--- a/README.org
+++ b/README.org
@@ -373,17 +373,18 @@ Note: Disabled.
       # configure pkgs
       # use nixpkgs if running a server (homelab or worklab profile)
       # otherwise use patched nixos-unstable nixpkgs
-      pkgs = (if ((systemSettings.profile == "homelab")
-        || (systemSettings.profile == "worklab")) then
-        pkgs-stable
-      else
-        (import nixpkgs-patched {
-          system = systemSettings.system;
-          config = {
-            allowUnfree = true;
-            allowUnfreePredicate = (_: true);
-          };
-        }));
+      pkgs = nixpkgs;
+      # pkgs = (if ((systemSettings.profile == "homelab")
+      #   || (systemSettings.profile == "worklab")) then
+      #   pkgs-stable
+      # else
+      #   (import nixpkgs-patched {
+      #     system = systemSettings.system;
+      #     config = {
+      #       allowUnfree = true;
+      #       allowUnfreePredicate = (_: true);
+      #     };
+      #   }));
 
       pkgs-stable = import inputs.nixpkgs-stable {
         system = systemSettings.system;
