--- a/README.org
+++ b/README.org
@@ -371,6 +371,7 @@ Note: Disabled.
       #   src = inputs.nixpkgs;
       # };
       # configure pkgs
+      pkgs = pkgs-unstable;
       # use nixpkgs if running a server (homelab or worklab profile)
       # otherwise use patched nixos-unstable nixpkgs
       # pkgs = (if ((systemSettings.profile == "homelab")
