--- a/README.org
+++ b/README.org
@@ -393,53 +393,47 @@ Note: Disabled.
             inherit inputs;
           };
         };
-
-        packages = forAllSystems (system:
-          let pkgs = nixpkgsFor.${system};
-          in {
-            default = self.packages.${system}.install;
-
-            install = pkgs.writeShellApplication {
-              name = "install";
-              runtimeInputs = with pkgs;
-                [ git ]; # I could make this fancier by adding other deps
-              # text = ''${./install} "$@"'';
-              text = ''${./bin/install} "$@"'';
-            };
-          });
-
-        apps = forAllSystems (system: {
-          default = self.apps.${system}.install;
-          install = {
-            type = "app";
-            program = "${self.packages.${system}.install}/bin/install";
+      };
+      packages = forAllSystems (system:
+        let pkgs = nixpkgsFor.${system};
+        in {
+          default = self.packages.${system}.install;
+          install = pkgs.writeShellApplication {
+            name = "install";
+            runtimeInputs = with pkgs;
+              [ git ]; # I could make this fancier by adding other deps
+            text = ''${./bin/install} "$@"'';
           };
         });
-      };
-
+      apps = forAllSystems (system: {
+        default = self.apps.${system}.install;
+        install = {
+          type = "app";
+          program = "${self.packages.${system}.install}/bin/install";
+        };
+      });
+    };
+  inputs = {
+    nixpkgs.url = "nixpkgs/nixos-unstable";
+    nixpkgs-stable.url = "nixpkgs/nixos-24.05";
+    home-manager-unstable.url = "github:nix-community/home-manager/master";
+    home-manager-unstable.inputs.nixpkgs.follows = "nixpkgs";
+    home-manager-stable.url = "github:nix-community/home-manager/release-24.05";
+    home-manager-stable.inputs.nixpkgs.follows = "nixpkgs-stable";
+    nixos-hardware.url = "github:nixos/nixos-hardware";
+    emacs-overlay = {
+      url = "github:nix-community/emacs-overlay";
       inputs = {
-        nixpkgs.url = "nixpkgs/nixos-unstable";
-        nixpkgs-stable.url = "nixpkgs/nixos-24.05";
-        home-manager-unstable.url = "github:nix-community/home-manager/master";
-        home-manager-unstable.inputs.nixpkgs.follows = "nixpkgs";
-        home-manager-stable.url =
-          "github:nix-community/home-manager/release-24.05";
-        home-manager-stable.inputs.nixpkgs.follows = "nixpkgs-stable";
-        nixos-hardware.url = "github:nixos/nixos-hardware";
-        emacs-overlay = {
-          url = "github:nix-community/emacs-overlay";
-          inputs = {
-            nixpkgs.follows = "nixpkgs";
-            nixpkgs-stable.follows = "nixpkgs";
-          };
-        };
-        # Ad blocker
-        blocklist-hosts = {
-          url = "github:StevenBlack/hosts";
-          flake = false;
-        };
+        nixpkgs.follows = "nixpkgs";
+        nixpkgs-stable.follows = "nixpkgs";
       };
     };
+    # Ad blocker
+    blocklist-hosts = {
+      url = "github:StevenBlack/hosts";
+      flake = false;
+    };
+  };
 }
 #+end_src
 * profiles/
