--- a/README.org
+++ b/README.org
@@ -339,15 +339,12 @@ Note: Disabled.
         name = "chu";
         email = "chufilthymutt@gmail.com";
         dotfilesDir = "~/.config/dogfiles";
-        # theme = null; TODO
-        # wm = null; #./system/wm/example.nix; ./user/wm/example.nix TODO
-        wm = ./system/wm/x11.nix; # TODO temporary, installs plasma 6
-        # wmType = "x11"; #./system/wm/example.nix, e.g. ./system/wm/x11.nix
-        wmType = ./system/wm/x11.nix; # TODO temporary, installs plasma 6
+        wm = ./system/wm/x11.nix;
+        wmType = ./system/wm/x11.nix;
         browser = "librewolf";
         term = "konsole";
-        font = "Noto Sans";
-        fontPkg = pkgs.noto-fonts;
+        # font = "Noto Sans";
+        # fontPkg = pkgs.noto-fonts;
         editor = "emacsclient";
         # editor spawning translator
         # generates a command that can be used to spawn editor inside a gui
