--- a/README.org
+++ b/README.org
@@ -363,7 +363,7 @@ Note: Disabled.
       }).applyPatches {
         name = "nixpkgs-patched";
         src = inputs.nixpkgs;
-        patches = [ ./patches/emacs-no-version-check.patch ];
+        # patches = [ ./patches/emacs-no-version-check.patch ];
       };
 
       # configure pkgs
@@ -379,7 +379,7 @@ Note: Disabled.
             allowUnfree = true;
             allowUnfreePredicate = (_: true);
           };
-          overlays = [ inputs.rust-overlay.overlays.default ];
+          # overlays = [ inputs.rust-overlay.overlays.default ];
         }));
 
       pkgs-stable = import inputs.nixpkgs-stable {
@@ -396,7 +396,7 @@ Note: Disabled.
           allowUnfree = true;
           allowUnfreePredicate = (_: true);
         };
-        overlays = [ inputs.rust-overlay.overlays.default ];
+        # overlays = [ inputs.rust-overlay.overlays.default ];
       };
 
       pkgs-emacs =
