--- a/README.org
+++ b/README.org
@@ -1162,9 +1162,8 @@ Note: Disabled.
   };
 
   home.file.".librewolf/librewolf.overrides.cfg".text =
-    ''defaultPref("font.name.serif.x-western","'' + userSettings.font + ''
-      ");
-
+    # ''defaultPref("font.name.serif.x-western","'' + userSettings.font + ''
+    #   ");
           defaultPref("font.size.variable.x-western",20);
           defaultPref("browser.toolbars.bookmarks.visibility","always");
           defaultPref("privacy.resisttFingerprinting.letterboxing", true);
