--- a/README.org
+++ b/README.org
@@ -1161,11 +1161,9 @@ Note: Disabled.
     DEFAULT_BROWSER = "${pkgs.librewolf}/bin/librewolf";
   };
 
-    # ''defaultPref("font.name.serif.x-western","'' + userSettings.font + ''
-    #   ");
-          # pref("font.name.serif.x-western","'' + userSettings.font + ''
   home.file.".librewolf/librewolf.overrides.cfg".text =
-    ''
+    ''defaultPref("font.name.serif.x-western","'' + userSettings.font + ''
+      ");
           defaultPref("font.size.variable.x-western",20);
           defaultPref("browser.toolbars.bookmarks.visibility","always");
           defaultPref("privacy.resisttFingerprinting.letterboxing", true);
@@ -1175,7 +1173,7 @@ Note: Disabled.
           defaultPref("privacy.clearOnShutdown.cookies",true);
           defaultPref("gfx.webrender.software.opengl",false);
           defaultPref("webgl.disabled",true);
-''
+          pref("font.name.serif.x-western","'' + userSettings.font + ''
         ");
 
             pref("font.size.variable.x-western",20);
