--- a/README.org
+++ b/README.org
@@ -342,7 +342,7 @@ Note: Disabled.
         wmType = ./system/wm/x11.nix;
         browser = "librewolf";
         term = "konsole";
-        font = "Noto Fonts"; # Selected font
+        font = "Noto Sans"; # Selected font
         fontPkg = pkgs.noto-fonts; # Font package
         editor = "emacsclient";
         # editor spawning translator
