--- a/README.org
+++ b/README.org
@@ -89,7 +89,11 @@ Install and build the home-manager configuration:
 
 #+name: install-and-build-home-manager-config
 #+begin_src sh
-nix run home-manager/master --extra-experimental-features nix-command --extra-experimental-features flakes -- switch --flake $SCRIPT_DIR#user;
+nix run home-manager/master \
+    --extra-experimental-features nix-command \
+    --extra-experimental-features flakes \
+    -- switch \
+    --flake $SCRIPT_DIR#user;
 #+end_src
 
 #+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :mkdirp yes :tangle ./bin/install
