--- a/bin/install
+++ b/bin/install
@@ -24,4 +24,8 @@ fi
 $EDITOR $SCRIPT_DIR/flake.nix;
 # sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR;
 sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
-nix run home-manager/master --extra-experimental-features nix-command --extra-experimental-features flakes -- switch --flake $SCRIPT_DIR#user;
+nix run home-manager/master \
+    --extra-experimental-features nix-command \
+    --extra-experimental-features flakes \
+    -- switch \
+    --flake $SCRIPT_DIR#user;
