clean up, fmt, add back wm

--- a/README.org
+++ b/README.org
@@ -533,7 +533,7 @@ Note: Currently disabled as it does not apply to this set up.
     ../../system/hardware/opengl.nix
     ../../system/hardware/printing.nix
     ../../system/hardware/bluetooth.nix
-    # (./. + "../../../system/wm" + ("/" + userSettings.wm) + ".nix")
+    (./. + "../../../system/wm" + ("/" + userSettings.wm) + ".nix")
     ../../system/wm/x11.nix # TODO fix
     ../../system/app/vm.nix
     ../../system/app/nh.nix
@@ -703,8 +703,8 @@ Note: Currently disabled as it does not apply to this set up.
 #+begin_src nix :mkdirp yes :tangle ./profiles/work/home.nix
 { config, pkgs, userSettings, ... }: {
   imports = [
-    # (./. + "../../../user/wm" + ("/" + userSettings.wm + "/" + userSettings.wm)
-    #   + ".nix") # My window manager selected from flake.nix TODO
+    (./. + "../../../user/wm" + ("/" + userSettings.wm + "/" + userSettings.wm)
+      + ".nix") # My window manager selected from flake.nix
     ../../user/shell/sh.nix
     ../../user/app/lf/lf.nix
     ../../user/app/git/git.nix
@@ -716,8 +716,8 @@ Note: Currently disabled as it does not apply to this set up.
     ../../user/lang/rust/rust.nix
     ../../user/hardware/bluetooth.nix
     ../../user/app/keepass/keepass.nix
-
   ];
+
   home = {
     username = userSettings.username;
     homeDirectory = "/home/" + userSettings.username;
@@ -772,6 +772,7 @@ Note: Currently disabled as it does not apply to this set up.
       kdePackages.kdenlive
     ];
   };
+
   programs = {
     home-manager.enable = true;
     git = {
@@ -794,12 +795,14 @@ Note: Currently disabled as it does not apply to this set up.
       search = { default = "DuckDuckGo"; };
     };
   };
+
   services = {
     nextcloud-client = {
       enable = true;
       startInBackground = true;
     };
   };
+
   # xdg = {
   #   enable = true;
   #   userDirs = {
