update this block

--- a/README.org
+++ b/README.org
@@ -1067,24 +1067,22 @@ Note: Currently disabled as it does not apply to this set up.
         variant = "";
         options = "caps:escape";
       };
-
-      displayManager = {
-        sddm.enable = true; # KDE
-        # gdm.enable = true; # GNOME
-        # lightdm.enable = true; # Canonical
-        # startx.enable = true; # none
-        sessionCommands = ''
-          xset b off
-          xset -dpms
-          xset r rate 350 50
-        '';
-      };
-
-      desktopManager = {
-        # Enable the KDE Plasma Desktop Environment.
-        plasma6.enable = true; # KDE
-        # gnome.enable = true; # GNOME
-      };
+      displayManager.sessionCommands = ''
+        xset b off
+        xset -dpms
+        xset r rate 350 50
+      '';
+    };
+    displayManager = {
+      sddm.enable = true; # KDE
+      # gdm.enable = true; # GNOME
+      # lightdm.enable = true; # Canonical
+      # startx.enable = true; # none
+    };
+    desktopManager = {
+      # Enable the KDE Plasma Desktop Environment.
+      plasma6.enable = true; # KDE
+      # gnome.enable = true; # GNOME
     };
 
     # windowManager = {
@@ -1093,14 +1091,13 @@ Note: Currently disabled as it does not apply to this set up.
     # };
 
     # For virtual machine guests to enable a daemon allowing for clipboard (copy/paste) sharing.
-    spice-vdagentd.enable = true;
+    spice-vdagentd.enable = true; # TODO VM flag
 
     libinput = {
       enable =
         true; # Enable touchpad support (enabled default in most desktopManager).
       touchpad.disableWhileTyping = true;
     };
-
   };
 }
 #+end_src
