--- a/README.org
+++ b/README.org
@@ -533,8 +533,8 @@ Note: Currently disabled as it does not apply to this set up.
     ../../system/hardware/opengl.nix
     ../../system/hardware/printing.nix
     ../../system/hardware/bluetooth.nix
-    (./. + "../../../system/wm" + ("/" + userSettings.wm) + ".nix")
-    ../../system/wm/x11.nix # TODO fix
+    # (./. + "../../../system/wm" + ("/" + userSettings.wm) + ".nix")
+    ../../system/wm/x11.nix
     ../../system/app/vm.nix
     ../../system/app/nh.nix
     ../../system/security/gpg.nix
