--- a/README.org
+++ b/README.org
@@ -703,8 +703,8 @@ Note: Currently disabled as it does not apply to this set up.
 #+begin_src nix :mkdirp yes :tangle ./profiles/work/home.nix
 { config, pkgs, userSettings, ... }: {
   imports = [
-    (./. + "../../../user/wm" + ("/" + userSettings.wm + "/" + userSettings.wm)
-      + ".nix") # My window manager selected from flake.nix
+    # (./. + "../../../user/wm" + ("/" + userSettings.wm + "/" + userSettings.wm)
+    #   + ".nix") # My window manager selected from flake.nix
     ../../user/shell/sh.nix
     ../../user/app/lf/lf.nix
     ../../user/app/git/git.nix
