--- a/README.org
+++ b/README.org
@@ -1047,8 +1047,8 @@ Note: Currently disabled as it does not apply to this set up.
     enable = true;
     openFirewall = true;
     settings = {
-      PasswordAuthentication = false;
-      PermitRootLogin = "no";
+      # PasswordAuthentication = false;
+      # PermitRootLogin = "no";
     };
   };
 }
