--- a/README.org
+++ b/README.org
@@ -348,9 +348,10 @@ Note: Currently disabled as it does not apply to this set up.
         dotfilesDir = "~/.config/dogfiles";
         # theme = "io"; # selcted theme from my themes directory (./themes/)
         # wm = "hyprland"; # Selected window manager or desktop environment; must select one in both ./user/wm/ and ./system/wm/
-        wm = ./system/wm/x11.nix;
+        wm = ./system/wm/x11.nix; # TODO
         # window manager type (hyprland or x11) translator
         # wmType = if ((wm == "hyprland") || (wm == "plasma")) then "wayland" else "x11";
+        wmType = ./system/wm/x11.nix; # TODO
         browser = "librewolf"; # Default browser; must select one from ./user/app/browser/
         # spawnBrowser = if ((browser == "qutebrowser") && (wm == "hyprland")) then "qutebrowser-hyprprofile" else (if (browser == "qutebrowser") then "qutebrowser --qt-flag enable-gpu-rasterization --qt-flag enable-native-gpu-memory-buffers --qt-flag num-raster-threads=4" else browser); # Browser spawn command must be specail for qb, since it doesn't gpu accelerate by default (why?)
         defaultRoamDir = "roam"; # Default org roam directory relative to ~/Org
