--- a/README.org
+++ b/README.org
@@ -1809,7 +1809,7 @@ in {
       '';
     };
     bash = {
-      enable = true;
+      # enable = true;
       enableCompletion = true;
       shellAliases = aliases;
     };
